trekkersdeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trekkers
spec:
  selector:
    matchLabels:
      app: trekkers
  replicas: 1
  template:
    metadata:
      labels:
        app: trekkers
    spec:
      containers:
      - name: trekkers
        image: prabakaran/southindiantrekkers.org
        ports:
        - containerPort: 3200
---
apiVersion: v1
kind: Service
metadata:
  name: trekkers
spec:
  ports:
  - port: 80
    targetPort: 3200
  selector:
    app: trekkers
